# impact-tools

./: CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml
docs/: README.md
docs/beacon/: README.md
docs/ega/: README.md
impact_tools/: __init__.py  __main__.py
impact_tools/beacon/: __init__.py  liftover.py  pgx.py
impact_tools/beacon/resources/: Snakefile
impact_tools/ega/: __init__.py  encrypt.py  upload_inbox.py
